src/objects/CustomObject1_Categoryselect__c.object
<CustomObject>
    <fields>
        <fullName>Category_text__c</fullName>
        <label>カテゴリテキスト</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>金額</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field1Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>カテゴリ</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>CustomObject1Categori__c.Owner:User.Department</field>
                <operation>equals</operation>
                <valueField>$User.Department</valueField>
            </filterItems>
            <filterItems>
                <field>CustomObject1Categori__c.Owner:User.Division</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>CustomObject1Categori__c.Owner:User.Division</field>
                <operation>equals</operation>
                <valueField>$User.Division</valueField>
            </filterItems>
            <filterItems>
                <field>CustomObject1Categori__c.Owner:User.Extension</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CustomObject1Categori__c</referenceTo>
        <relationshipLabel>カテゴリ選択</relationshipLabel>
        <relationshipName>Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LV1__c</fullName>
        <label>LV1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>レベル1</fullName>
                </value>
                <value>
                    <fullName>レベル2</fullName>
                </value>
                <value>
                    <fullName>レベル3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LV2__c</fullName>
        <label>LV2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LV1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>レベル2-1</fullName>
                </value>
                <value>
                    <fullName>レベル2-2</fullName>
                </value>
                <value>
                    <fullName>レベル2-3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opp__c</fullName>
        <label>商談</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>カテゴリ選択</relationshipLabel>
        <relationshipName>Opp</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>カテゴリ選択</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>カテゴリ選択No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CheckFee</fullName>
        <active>true</active>
        <errorConditionFormula>Opp__r.Amount &lt; Opp__r.Field1_CategoryALL__c + Fee__c -  PRIORVALUE( Fee__c )</errorConditionFormula>
        <errorMessage>カテゴリの合計金額が商談の金額を超えています。</errorMessage>
    </validationRules>
</CustomObject>